# Repo

tools/Codes2Git/: firstSegmentation.cpp  lastcode.cpp  showPCL.cpp
tools/FeatureExtractionPy/: FeatureExtraction.py  chard_features.csv  lettuce_features.csv  plant_features.csv  practices.py
tools/PclProject/: CMakeLists.txt  latestdepth.tiff  main.cpp  yolosamdepth.tiff
tools/PclProject/BoxImages/TakePhoto/: depth_1.tiff  depth_2.tiff  depth_3.tiff
tools/PclProject/olds/: depth_20240216_235736_370_700_0.tiff  depth_image.tiff  depth_image_2.tiff  depth_room2.tiff  depthplant.tiff
tools/yoloSegmentation/: CropImage.py  PlantFeatures.py  depth_interpolation.py
